<resources>
    <string name="app_name">learn-one</string>

    <string name="hello_world">Hello world!</string>
    <string name="titlle">Описание</string>
    <string name="action_settings">Settings</string>
    <string name="Primer_one">Задача 1</string>
    <string name="text_primer_one">Решите пример: 2 + 2 </string>
    <string name="Primer_two">Задача 2</string>
    <string name="text_primer_two">Решите пример: (17 - 10) * 2 - 14</string>
    <string name="Primer_three">Задача 3</string>
    <string name="text_primer_three">Решите пример: 9^2 - 35 + 29 * 6 </string>

    <string name="rezult">Результаты теста</string>

    <string name="start">Решите 3 задачи и узнайте резульат</string>

    <string name="button_start">Start</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_finish">Finish</string>


    <string name="title_activity_activiry_one">activiry_one</string>
    <string name="title_activity_activiry_two">activiry_two</string>
    <string name="title_activity_activiry_three">activiry_three</string>
    <string name="title_activity_rzult_activity">Rzult_activity</string>

</resources>
