<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.learn.one.Activiry_three">

    <TextView
            android:text="@string/Primer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_primer_three"
            android:id="@+id/textView5-1"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" android:textSize="25dp" android:textColor="#E538CB"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="365"
            android:id="@+id/radioButton7"
            android:layout_below="@+id/textView5-1" android:layout_alignLeft="@+id/radioButton8"
            android:layout_alignStart="@+id/radioButton8"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="115"
            android:id="@+id/radioButton8"
            android:layout_below="@+id/radioButton7" android:layout_alignLeft="@+id/radioButton9"
            android:layout_alignStart="@+id/radioButton9"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="220"
            android:id="@+id/radioButton9" android:layout_below="@+id/radioButton8"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button6"
            android:layout_centerVertical="true" android:layout_toRightOf="@+id/radioButton9"
            android:layout_toEndOf="@+id/radioButton9"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:id="@+id/button7"
            android:layout_alignTop="@+id/button6" android:layout_toLeftOf="@+id/radioButton9"
            android:layout_toStartOf="@+id/radioButton9"/>

</RelativeLayout>
