<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.learn.one.Activiry_two">



    <TextView
            android:text="@string/Primer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView4"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_primer_two"
            android:id="@+id/textView4-1"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:textSize="25dp" android:textColor="#2E84EA"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/radioButton4" android:layout_below="@+id/textView4-1"
            android:layout_centerHorizontal="true" android:layout_marginTop="45dp"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="35"
            android:id="@+id/radioButton5" android:layout_below="@+id/radioButton4"
            android:layout_centerHorizontal="true"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="21"
            android:id="@+id/radioButton6" android:layout_below="@+id/radioButton5"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button4"
            android:layout_marginTop="54dp"
            android:layout_below="@+id/radioButton6" android:layout_toRightOf="@+id/radioButton6"
            android:layout_toEndOf="@+id/radioButton6"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:id="@+id/button5"
            android:layout_alignTop="@+id/button4" android:layout_toLeftOf="@+id/radioButton6"
            android:layout_toStartOf="@+id/radioButton6"/>

</RelativeLayout>
