<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.learn.one.Activiry_one">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button2"
            android:layout_marginTop="50dp" android:layout_below="@+id/radioButton3"
            android:layout_toRightOf="@+id/radioButton" android:layout_toEndOf="@+id/radioButton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:id="@+id/button3"
            android:layout_alignTop="@+id/button2" android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/radioButton"
            android:layout_below="@+id/textView3" android:layout_toRightOf="@+id/button3"
            android:layout_toEndOf="@+id/button3" android:layout_marginTop="43dp"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton" android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:id="@+id/radioButton3"
            android:layout_below="@+id/radioButton2" android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Primer_one"
            android:id="@+id/textView2"
            android:textSize="30dp"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_primer_one"
            android:id="@+id/textView3"
            android:textSize="25dp"
            android:layout_below="@+id/textView2" android:layout_centerHorizontal="true" android:textColor="#47AD1A"/>
</RelativeLayout>
